--- a/pages/index.html
+++ b/pages/index.html
@@ -4,33 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../css/style.css" rel="stylesheet" />
+
     <title>Login</title>
 </head>
 
 <body>
-    <form>
-        <div>
-            <div><label>Email: </label></div>
-            <input type="email" name="email" placeholder="seu@email.com">
-        </div>
+    <header></header>
 
-        <div>
-            <div><label>Senha: </label></div>
-            <input type="password" name="password" placeholder="Senha">
+    <main>
+        <div class="container">
+            <div class="login-box">
+                <form class="login-form">
+                    <h2>Acessar a Plataforma</h2>
+                    <label for="username">Usuário *</label>
+                    <input type="text" id="username" name="username" required>
+                    <label for="password">Senha *</label>
+                    <input type="password" id="password" name="password" required>
+                    <button type="submit">Acessar</button>
+                </form>
+            </div>
+            <div class="image-container">
+                <img src="../img/img_login.jpg" alt="Imagem à direita">
+            </div>
         </div>
+    </main>
 
-        <div>
-            <button type="button">Recuperar Senha</button>
-        </div>
-
-        <div>
-            <button type="button">Entrar</button>
-        </div>
-
-        <div>
-            <button type="button">Registrar</button>
-        </div>
-    </form>
+    <footer></footer>
 </body>
 
 </html>
